# sv-travel-planner

./: README.md  requirements.txt  streamlit_app.py
sv_country_planner/: README.md  pyproject.toml
sv_country_planner/src/: requirements.txt
sv_country_planner/src/sv_country_planner/: crew.py  main.py  streamlit_app.py
sv_country_planner/src/sv_country_planner/config/: agents.yaml  tasks.yaml
sv_env/: pyvenv.cfg
sv_env/Scripts/: activate  activate.bat
