[project]
name = "sv_country_planner"
version = "0.1.0"
description = "sv_country_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
sv_country_planner = "sv_country_planner.main:run"
run_crew = "sv_country_planner.main:run"
train = "sv_country_planner.main:train"
replay = "sv_country_planner.main:replay"
test = "sv_country_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
